--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,9 @@ body {
   color: #333;
   font-family:  -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-height: 100vh;
 }
+
 a {
   color: #333;
   text-decoration: none;
@@ -30,7 +32,6 @@ a {
   margin: 0 auto;
 }
 nav {
-  margin: 10px auto 80px;
   padding: 10px 0;
   display: flex;
   justify-content: flex-end;
@@ -51,5 +52,7 @@ footer {
   color: #777;
   border-top: 1px solid #eaeaea;
 }
+
+
 
 
