--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,5 @@
+
+
 .container {
   color: red;
   padding: 0 2rem;
@@ -13,14 +15,16 @@
   align-items: center;
 }
 
-.footer {
+/* .footer {
   display: flex;
   flex: 1;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
-}
+  position: fixed;
+  bottom: 0; 
+} */
 
 .footer a {
   display: flex;
@@ -121,7 +125,29 @@
   flex-direction: column;
   width: 100%;
   align-items: stretch;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 15px;
   
+}
+
+.contact {
+  padding-bottom: 15px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: stretch;  
+  
+  /* position: fixed;
+  bottom: 0; */
+}
+
+.input {
+  border: none;
+  background-color: transparent;
 }
 
 
@@ -130,16 +156,71 @@
   flex-direction: column;
   width: 100%;
   justify-content: space-around;
-
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
+
+.flexContainer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+/* .musicLinksParent {
+  border: 1px solid red;
+  height: 200px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+} */
+
+
+
+/* .image {
+    max-width: 50%;
+    height: auto;
+} */
 
 .about {
   font-size: x-large;
+  padding-top: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  /* -webkit-text-stroke: 1px black; */
+  
+
 }
+
+/* .aboutText {
+  stroke: black;
+  stroke-width: 500px;
+} */
 
 .shows {
   font-size: medium;
+  padding-left: 125px;
+  padding-right: 125px;
+  padding-top: 50px
 }
+
+.showElements {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+/* .showPage {
+  padding-bottom: 500px;
+} */
 
 
 
@@ -147,6 +228,12 @@
   display: flex;
   width: 100%;
   justify-content: space-around; 
+  border: none;
+  margin-top: -25px;
+  
+  
+  /* background-color: transparent; 
+  border: none;  */
  
 }
 
@@ -155,13 +242,46 @@
   flex-direction: column;
   width: auto;
   align-items: center;
-  height: 150px;
+  height: 200px;
   background: transparent no-repeat center;
-  background-size: cover;
- 
-  
-  
+  background-size: cover; 
+  cursor: pointer;
+
+  /* margin-top: 1px;
+  margin-bottom: 0px;
+  margin-right: 20px;  */
 }
+
+
+.buttonbg {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 15;
+  cursor: pointer;
+  /* -webkit-text-stroke: .5px black; */
+
+    
+  
+    
+    
+
+}
+
+/* .musicpageimage {
+  width: 400px;
+  height: 100px;
+}
+
+.img-responsive {
+  display: block;
+  width: 100%;
+} */
+
+
+
+
+
 
 /* .SkoloLogo {
   display: flex;
@@ -189,9 +309,10 @@
 
 
 
-/* .layout {
-  background: #007DB2
-} */
+.layout {
+  stroke: black;
+  stroke-width: 50px;
+}
 
 /* .SkoloLogoImage {
   display: flex;
