--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,15 @@ a {
   box-sizing: border-box;
 } */
 
+/* @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap'); */
+
 body {
   background: #f2f2f2;
   color: #333;
-  font-family:  -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family:  Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   min-height: 100vh;
+  /* font-family: 'Roboto'; */
 }
 
 a {
@@ -52,6 +55,14 @@ footer {
   color: #777;
   border-top: 1px solid #eaeaea;
 }
+
+/* @font-face {
+  font-family: "Newake";
+  src: url('../fonts/Newake-Font-Demo.otf');
+  font-weight: normal;
+  font-style: normal;
+} */
+
 
 
 
