--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -127,22 +127,35 @@
   flex-direction: column;
   align-items: center;
   width: 100%; 
+  border-width:2px;
+  /* border-style: solid;
+  border-color: white; */
+  margin-top: 100px;
+}
+
+.tourDates {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%; 
 }
 
 .connectContactForm {
-  height: 500px;
-  width: 500px;
   display: flex;
-  flex-direction: column;
-  align-items: center;  
+  flex-direction: row;
+  justify-content: center;  
 }
 
 .form {
   display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: stretch;  
+  flex-direction: row;
+  justify-content: center; 
+  height: 10;
+  width: 2000px;
+  
+ 
 }
+
 
 .input {
   border: none;
