--- a/components/BackgroundLayoutImg/BackgroundLayoutImg.module.css
+++ b/components/BackgroundLayoutImg/BackgroundLayoutImg.module.css
@@ -1,15 +1,14 @@
 .bgImage {
     height: 100vh;
     width: 100%;
-    background-image: url('../../public/SkoloStairs24x16.png');
-    /* object-fit: contain; */
-    background-size: contain;
+    background-image: url('../../public/SkoloStairs1920x1080.png');
+    object-fit: contain; 
+    /* background-position:center; */
+    background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-color: black;
-    
-  
-    
-
+    background-position: center;
     color: white;
+   
 }
+
