--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
-/* html,
+html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: black;
 }
 
 a {
@@ -13,56 +14,4 @@ a {
 
 * {
   box-sizing: border-box;
-} */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap'); */
-
-body {
-  background: #f2f2f2;
-  color: #333;
-  font-family:  Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  min-height: 100vh;
-  /* font-family: 'Roboto'; */
 }
-
-a {
-  color: #333;
-  text-decoration: none;
-}
-.content {
-  max-width: 960px;
-  margin: 0 auto;
-}
-nav {
-  padding: 10px 0;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  border-bottom: 1px solid #ddd;
-}
-nav a {
-  margin-left: 12px;
-}
-nav .logo {
-  margin-right: auto;
-}
-footer {
-  display: block;
-  text-align: center;
-  padding: 30px 0;
-  margin-top: 60px;
-  color: #777;
-  border-top: 1px solid #eaeaea;
-}
-
-/* @font-face {
-  font-family: "Newake";
-  src: url('../fonts/Newake-Font-Demo.otf');
-  font-weight: normal;
-  font-style: normal;
-} */
-
-
-
-
