--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,22 @@ a {
 * {
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family:"BebasNeue";
+  src:url("../public/fonts/BebasNeue-Regular.woff2") format("woff2"),url("../public/fonts/BebasNeue-Regular.woff") format("woff");
+  font-style:normal;font-weight:400;
+}
+
+
+ 
+@font-face {
+  font-family:"Roboto";
+  src:url("../public/fonts/Roboto-Medium.woff2") format("woff2"),url("../public/fonts/Roboto-Medium.woff") format("woff");
+  font-style:normal;font-weight:400;
+}
+
+
+main {
+  min-height: 100vh;
+}
