--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,6 @@
 }
 
 .main {
-  min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -324,7 +323,9 @@
   }
 }
 
-
+/* .listenLinksMargin {
+  margin-top: 100px;
+} */
 
 
 
