--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
+  /* background-image: url('../public/SkoloStairs1920x1080.png'); */
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    background-color: black;
+
 }
 
 a {
