--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -333,3 +333,15 @@
   color: white;
 }
 
+.footerTab {
+  width: 50%;
+  height: 3em;
+  -webkit-transition: width 2s ease, height 2s ease;
+  -moz-transition: width 2s ease, height 2s ease;
+  -o-transition: width 2s ease, height 2s ease;
+  -ms-transition: width 2s ease, height 2s ease;
+  transition: width 2s ease, height 2s ease;
+  overflow:hidden;
+  margin:0.1em auto;
+}
+
